--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "ember-data": "~3.28.0",
     "ember-export-application-global": "^2.0.1",
     "ember-fetch": "^8.1.1",
-    "ember-font-awesome": "^4.0.0-rc.4",
     "ember-load-initializers": "^2.1.2",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-page-title": "^6.2.2",
@@ -62,7 +61,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "qunit": "^2.16.0",
-    "qunit-dom": "^1.6.0"
+    "qunit-dom": "^1.6.0",
+    "sass": "^1.42.1"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
